Revert "Revert "fixed issue on mobile where footer was wrong size""
This reverts commit 95e34ca4b4d1dc2df24409ca6f589174019f5fff.

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -34,7 +34,6 @@ instead, 1rem = 1em = 16px */
   }
 
   .splash {
-    height: 100vh;
     justify-content: flex-start;
   }
 
@@ -43,16 +42,12 @@ instead, 1rem = 1em = 16px */
     text-align: center;
   }
 
-  h3 {
-    font-size: 3.2rem;
-  }
-
   .tooltip:hover .tooltiptext {
     visibility: hidden;
   }
 
   .copyright {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
   }
 
   .resume {
@@ -82,5 +77,13 @@ instead, 1rem = 1em = 16px */
   h1 {
     font-size: 4.2rem;
     text-align: center;
+  }
+
+  h2 {
+    font-size: 2.4rem;
+  }
+
+  h3 {
+    font-size: 1.8rem;
   }
 }
